--- a/BigDataService/appsettings.json
+++ b/BigDataService/appsettings.json
@@ -7,9 +7,9 @@
   },
   "ApiConfiguration": {
     "ApiAddress": "https://dmigw.govcloud.dk/v2/metObs/",
-    "ApiKey": "88a94d93-f49e-4f16-b4f3-1d41ef42cbf0"
+    "ApiKey": "1fa153cf-5edb-40f7-996b-14adcdc497f4"
   },
   "ConnectionStrings": {
-    "BigData": "Server=S-HF-F51-P2-002\\SQLEXPRESS;Database=BigData;Trusted_Connection=True;"
+    "BigData": "Data Source=(localdb)\\MSSQLlocalDB;Initial Catalog=BigData;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;"
   }
 }
